Cleaned up posts

--- a/source/_posts/2010-05-23-digsby.html
+++ b/source/_posts/2010-05-23-digsby.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Untitled
+title: Digsby
 published: true
 ---
 <blockquote class="posterous_short_quote">Digsby is a &lsquo;productivity&rsquo; tool for the social animal.
