--- a/source/_posts/2010-07-29-trojan-me.html
+++ b/source/_posts/2010-07-29-trojan-me.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Untitled
+title: Trojan
 published: true
 ---
 <blockquote class="posterous_short_quote">I&rsquo;m now a Trojan! Fight on! :-)</blockquote>
