--- a/source/_posts/2011-06-11-tcp-joke.html
+++ b/source/_posts/2011-06-11-tcp-joke.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Untitled
+title: TCP
 published: true
 ---
 <p>&ldquo;The problem with TCP jokes is that people keep retelling them slower until you get them.&rdquo;&mdash;
