--- a/source/_posts/2011-07-14-reply-to-noreply-rackspace-com.html
+++ b/source/_posts/2011-07-14-reply-to-noreply-rackspace-com.html
@@ -11,10 +11,9 @@ published: true
         href="mailto:noreply@rackspace.com">noreply@rackspace.com</a>". Paradoxical! The reply-to address is one that starts with "noreply@...". That was quite funny!&nbsp;</span></span>
 </p>
 <p>Did anyone else receive this email?</p>
-<ol>
-    <li><img src="/images/2011-07-14-reply-to-noreply-rackspace-com-/Screen_shot_2011-07-14_at_8.57.48_PM_copy.png">
-    </li>
-</ol>
+<p>
+    <img src="/images/2011-07-14-reply-to-noreply-rackspace-com/Screen_shot_2011-07-14_at_8.57.48_PM_copy.png">
+</p>
 
 <div class="CodeRay">
     <div class="code"><pre>Delivered-To: *********
