--- a/source/_posts/2011-07-22-thoughts-on-mac-os-x-lion.html
+++ b/source/_posts/2011-07-22-thoughts-on-mac-os-x-lion.html
@@ -96,5 +96,4 @@ erlc -W  +debug_info +inline -o../ebin hipe_rtl.erl
 <p><span style="font-size: medium;">Update:</span> I now use Homebrew instead of Macports</p>
 <p><span style="font-size: medium;">Update:</span> I ended up purchasing parallels and upgrading my RAM to 8GB</p>
 <p><span style="font-size: medium;">Update:</span> The problem with <a
-        href="https://discussions.apple.com/thread/3190130?start=0&amp;tstart=0" target="_blank">dual monitors and full
-    screen apps</a> is plain annoying.</p>
+        href="https://discussions.apple.com/thread/3190130?start=0&amp;tstart=0" target="_blank">dual monitors and full screen apps</a> is plain annoying.</p>
