--- a/source/_posts/2011-08-02-the-chrome-web-store-now-has-the-google-1-button-for-apps.html
+++ b/source/_posts/2011-08-02-the-chrome-web-store-now-has-the-google-1-button-for-apps.html
@@ -4,8 +4,6 @@ title: The Chrome Web Store Now Has The Google +1 Button For Apps
 published: true
 ---
 <p><span style="font-size: x-small;">Click on the image for a larger version.</span></p>
-<ol>
-    <li><img
-            src="/images/2011-08-02-the-chrome-web-store-now-has-the-google-1-button-for-apps/Screen_Shot_2011-08-02_at_7.35.35_PM.png">
-    </li>
-</ol>
+<p><img
+        src="/images/2011-08-02-the-chrome-web-store-now-has-the-google-1-button-for-apps/Screen_Shot_2011-08-02_at_7.35.35_PM.png">
+</p>
