--- a/source/_posts/2010-06-05-free-flash-builder.html
+++ b/source/_posts/2010-06-05-free-flash-builder.html
@@ -1,11 +1,9 @@
 ---
 layout: post
-title: Untitled
+title: Free Flash Builder
 published: true
 ---
-<ol>
-    <li><img src="/images/2010-06-05-untitled/tumblr_l3jqcaZzRO1qc0p3ho1_r1_1280.png"></li>
-</ol>
+<p><img src="/images/2010-06-05-free-flash-builder/tumblr_l3jqcaZzRO1qc0p3ho1_r1_1280.png"></p>
 <p>Adobe working hard to push Flash? The text reads:</p>
 <p><strong>Free Flash Builder 4</strong></p>
 <p>Summer is the perfect time to add Flash Builder to your job skills. Start with a FREE copy of Flash Buider 4 Standard
