--- a/source/_posts/2010-12-05-key-studio.html
+++ b/source/_posts/2010-12-05-key-studio.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Untitled
+title: My New KeyStudio
 published: true
 ---
-<ol>
-    <li><img src="/images/2010-12-05-untitled/p35.jpg"></li>
-</ol>
+<p>
+    <img src="/images/2010-12-05-key-studio/p35.jpg">
+</p>
 Garage Band + KeyStudio MIDI keyboard = Awesome. It was fun playing a bare-bones keyboard connected to a laptop at Church! First time for me.
