--- a/source/_posts/2011-05-28-scribble-app-reaches-the-10-000-users-milestone.html
+++ b/source/_posts/2011-05-28-scribble-app-reaches-the-10-000-users-milestone.html
@@ -4,8 +4,7 @@ title: Scribble App reaches the 10,000 users milestone!
 published: true
 ---
 <p>It's been thrilling to watch <a href="http://wreally.com" target="_blank">our</a> <a
-        href="https://chrome.google.com/webstore/detail/offpaifnchmpbnjhjbhpdffahlofdkfb" target="_blank">Scribble
-    App</a> grow through all these months. With a 4.58 user rating and 10,018 users as of today, Scribble has officially
+        href="https://chrome.google.com/webstore/detail/offpaifnchmpbnjhjbhpdffahlofdkfb" target="_blank">Scribble App</a> grow through all these months. With a 4.58 user rating and 10,018 users as of today, Scribble has officially
     crossed the 10,000 users milestone. We were there on Day One when the Chrome Web Store opened its gates. In two days
     <a href="http://jasonbos.co/scribble-makes-it" target="_blank">Scribble had 439 installs</a> and showed up on the
     Featured section of the utilities category. The early mover advantage helped us get enough attention from the press.
